[package]
name = "rustgrad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mnist = "0.6.0"
rand = "0.8.4"
ndarray = { version = "0.15.3", features = ["rayon"] }
rayon = "1.8.1"

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1